# xai-evaluation

./: .env.example  .gitignore  CONTEXT_ENGINEERING.md  DEPLOYMENT.md  FINDINGS_AND_FUTURE_WORK.md  HEXEVAL_COMPLETE_ARCHITECTURE.md  IMPROVEMENT_PLAN.md  PERSONA_REDESIGN_ANALYSIS.md  QUICK_START_DEPLOYMENT.md  README.md  README_HEXEVAL.md  README_VXAI_CreditRisk.md  TESTING.md  TEST_PERSONAS.md  analyze_new_data.py  inspect_artifact.py  packages.txt  plan.md  pyproject.toml  pytest.ini  requirements.txt  rerun_evaluations.py  streamlit_app.py  train_credit_risk_model.ipynb  train_credit_risk_model.py  train_test_model.py  xgboost_loan_default_research.pkl  xgboost_loan_default_research_v2.pkl
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.streamlit/: config.toml  secrets.toml.example
config/: config_credit.yaml  config_credit_new.yaml
docs/: BUG_AUDIT_REPORT.md  CREDIT_RISK_EVALUATION_RESULTS.md  DOMAIN_CONFIG_EXAMPLES.md  END_USER_PERSONA.md  FIGURES_GUIDE.md  HEART_DISEASE_EVALUATION_RESULTS.md  HEXEVAL_COMPLETE_ARCHITECTURE.md  HEXEval_Configuration.md  HEXEval_Dataflow_Architecture.md  HEXEval_HowItWorks.md  HEXEval_Prerequisites.md  LAYERED_ARCHITECTURE.md  METRICS_GUIDE.md  PROMPT_OPTIMIZATION.md  README_heart_disease.md  RECOMMENDATION_DISCREPANCY_EXPLAINED.md  RESEARCH_PAPER_FIGURES.md  RUN_HEXEVAL.md  SUMMARY_heart_disease.md  TECHNICAL_AUDIT.md  VIVA_DEMO_SCRIPT.md  VIVA_QUICK_REFERENCE.md  papers.txt
examples/: quickstart.ipynb
hexeval/: __init__.py
hexeval.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+71 files in other folders)
