[build-system]
requires = ["setuptools>=45", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "hexeval"
version = "0.1.0"
description = "Holistic Explanation Evaluation Framework for XAI"
readme = "README_HEXEVAL.md"
requires-python = ">=3.8"
authors = [
    {name = "Salman Faraj", email = "salman.faraj06@gmail.com"}
]
dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.23.0",
    "scikit-learn>=1.2.0",
    "xgboost>=1.7.0",
    "pyyaml>=6.0",
    "shap>=0.42.0",
    "lime>=0.2.0",
    "dice-ml>=0.10.0",
    "anchor-exp>=0.0.2",
    "scipy>=1.10.0",
    "openai>=1.0.0",
    "streamlit>=1.28.0",
    "plotly>=5.17.0",
    "joblib>=1.3.0",
    "tqdm>=4.65.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest", "black", "mypy"]

[tool.setuptools]
packages = ["hexeval", "hexeval.core", "hexeval.explainers", "hexeval.metrics", "hexeval.evaluation", "hexeval.ui", "hexeval.reports"]
